# DungeonCracker

./: Cargo.toml  README.md  data.rs
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  wasm.rs
src/dungeon/: dungeon_data_parser.rs  mod.rs  reverse_dungeon.rs  reverser_instruction.rs
src/lattice/: enumerate.rs  lll.rs  mod.rs
src/lcg/: lcg.rs  mod.rs  rand.rs
src/math/: big_fraction.rs  big_matrix.rs  big_vector.rs  gauss_jordan.rs  int_type.rs  lu_decomposition.rs  mod.rs  mth.rs  optimize.rs
src/mc/: chunk_rand.rs  hensel.rs  jrand.rs  mod.rs  next_long_reverser.rs  population_reverser.rs
src/reverser/: filtered_skip.rs  mod.rs  random_reverser.rs
web/: next.config.ts  package-lock.json  package.json
web/public/wasm/: dungeon_cracker.d.ts  dungeon_cracker_bg.wasm
web/scripts/: copy-assets.sh
web/src/: wasm.d.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: DungeonPanel.tsx  FloorGrid.tsx  Header.tsx  MultiDungeonResults.tsx  OptionsForm.tsx  ParticleBackground.tsx  PictureImportDialog.tsx  ResultsPanel.tsx  WarningDialog.tsx
web/src/hooks/: useCracker.ts  useImageDrop.ts
web/src/lib/: crack-cache.ts  hash-serialization.ts  image-analysis.ts  initial-animation.ts  types.ts  wasm-glue.js
web/src/workers/: cracker.worker.ts
