[package]
name = "dungeon_cracker"
version = "0.1.0"
edition = "2021"
description = "Minecraft dungeon seed cracker — recovers world seeds from dungeon floor patterns"
license = "MIT"
readme = "README.md"
keywords = ["minecraft", "seed", "dungeon", "lattice", "cracker"]
default-run = "dungeon_cracker"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dungeon_cracker"
path = "src/main.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rug = { version = "1", optional = true }

[features]
default = ["gmp"]
wasm = ["wasm-bindgen"]
gmp = ["rug"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
